--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,2 +1,4 @@
-$primary: red;
-@import "../node_modules/bootstrap/scss/bootstrap";
+// Font
+$font-family-sans-serif: 'Open Sans', sans-serif;
+
+@import '../node_modules/bootstrap/scss/bootstrap';
