--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -7,4 +7,26 @@ $secudary: #10bcee;
 $dark: #2b3041;
 $light: #f3f6f9;
 
+//Navbar
+$navbar-padding-y: 1rem;
+$navbar-dark-color: #fff;
+$navbar-dark-hover-color: $secudary;
+
+//Buttons
+
+$button-radius: 50px;
+$button-padding-x: 30px;
+$button-padding-y: 10px;
+
+$btn-border-radius: $button-radius;
+$btn-border-radius-sm: $button-radius;
+$btn-border-radius-lg: $button-radius;
+$btn-padding-x: $button-padding-x;
+$btn-padding-sm: $button-padding-x;
+$btn-padding-lg: $button-padding-x;
+$btn-padding-y: $button-padding-y;
+$btn-padding-sm: $button-padding-y;
+$btn-padding-lg: $button-padding-y;
+$navbar-toggler-border-radius: 5px;
+
 @import '../node_modules/bootstrap/scss/bootstrap';
