Header/Hero Section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,3 +5,8 @@
     color: var(--bs-dark);
   }
 }
+
+.header {
+  background: url(../images/header-background.jpg) center center no-repeat;
+  background-size: cover;
+}
