--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,7 +6,27 @@
   }
 }
 
+.navbar-sticky {
+  opacity: 0.9;
+  box-shadow: 0 0 10px rgba(0,0,0, 0.5);
+}
+
+.navbar {
+  transition: all 0.5s ease-in-out;
+}
+
 .header {
   background: url(../images/header-background.jpg) center center no-repeat;
   background-size: cover;
+}
+
+@media (max-width: 1000px) {
+  .hero .image-container {
+    display:flex;
+    justify-content: center;
+  }
+
+  .hero .text-container {
+    text-align: center;
+  }
 }
